# remux

./: LICENSE  colortest.sh  remux.cabal
app/: Main.hs
src/: Colors.hs  Lib.hs  LoadAverage.hs  Shell.hs
